--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ project(":desktop") {
 
     dependencies {
         implementation project(":core")
+        implementation 'com.google.code.gson:gson:2.8.6'
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
@@ -56,6 +57,7 @@ project(":core") {
 
 
     dependencies {
+        implementation 'com.google.code.gson:gson:2.8.6'
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         
