--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
+
 }
 
 project(":desktop") {
@@ -48,6 +49,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
         
     }
 }
@@ -60,6 +62,7 @@ project(":core") {
         implementation 'com.google.code.gson:gson:2.8.6'
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
         
     }
 }
